add login logic

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -23,4 +23,4 @@
 @import 'basscss/node_modules/basscss-colors';
 @import 'basscss/node_modules/basscss-background-colors';
 
-@import './look-and-feel';
+@import './defaults';
